@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-02-03 17:23:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-72
+
+    Summary:
+      checkpointing
+    Revision:
+      missingexts--head--0.7--patch-72
+
+
+    modified files:
+     ChangeLog Makefile gencabal.py
+
+
 2005-02-03 16:58:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-71
 
     Summary:
